--- a/QuimicaAcessivel/QuimicaAcessivel/ViewController/Main.storyboard
+++ b/QuimicaAcessivel/QuimicaAcessivel/ViewController/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Tutorial View Controller-->
         <scene sceneID="GiG-vc-qqa">
             <objects>
-                <viewController id="Kno-7o-cwc" sceneMemberID="viewController">
+                <viewController id="Kno-7o-cwc" customClass="TutorialViewController" customModule="QuimicaAcessivel" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Hsh-F9-raM">
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -26,10 +26,10 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="04o-ab-kV9">
-                                <rect key="frame" x="628" y="96.5" width="200" height="200"/>
+                                <rect key="frame" x="664" y="114.5" width="164" height="164"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="04o-ab-kV9" secondAttribute="height" multiplier="1:1" id="TI3-FH-J8c"/>
-                                    <constraint firstAttribute="width" constant="200" id="uRX-gr-EPJ"/>
+                                    <constraint firstAttribute="width" constant="164" id="uRX-gr-EPJ"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bem vindo ao Química Acessível" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xrq-sO-ZLa">
@@ -38,35 +38,35 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Wql-gZ-1X1">
-                                <rect key="frame" x="68" y="77" width="536" height="253"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Wql-gZ-1X1">
+                                <rect key="frame" x="68" y="69" width="572" height="212"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Este jogo tem por objetivo validar a acessibilidade de um jogo para o ensino de química." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FcN-Cx-N3u">
-                                        <rect key="frame" x="0.0" y="0.0" width="536" height="41"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="572" height="41"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="À sua frente encontram-se cartões, mova e interaja com eles procurando afastá-los e aproxíma-los." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a5I-0R-fAi">
-                                        <rect key="frame" x="0.0" y="53" width="536" height="41"/>
+                                        <rect key="frame" x="0.0" y="53" width="572" height="41"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Este jogo tem por objetivo validar a acessibilidade de um jogo para o ensino de química." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FEE-Ua-tG9">
-                                        <rect key="frame" x="0.0" y="106" width="536" height="41"/>
+                                        <rect key="frame" x="0.0" y="106" width="572" height="41"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Toque duas vezes na tela para saber como estão dispostos." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8uT-a7-mBI">
-                                        <rect key="frame" x="0.0" y="159" width="536" height="41"/>
+                                        <rect key="frame" x="0.0" y="159" width="572" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Para navegar, deslize para direita, esquerda, cima e baixo. " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iMt-H9-jkH">
-                                        <rect key="frame" x="0.0" y="212" width="536" height="41"/>
+                                        <rect key="frame" x="0.0" y="191.5" width="572" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -85,7 +85,7 @@
                             <constraint firstItem="ED3-0i-vzT" firstAttribute="trailing" secondItem="04o-ab-kV9" secondAttribute="trailing" constant="24" id="enl-cG-QME"/>
                             <constraint firstItem="04o-ab-kV9" firstAttribute="leading" secondItem="Wql-gZ-1X1" secondAttribute="trailing" constant="24" id="eyE-Rb-aML"/>
                             <constraint firstItem="Wql-gZ-1X1" firstAttribute="leading" secondItem="ED3-0i-vzT" secondAttribute="leading" constant="24" id="hkU-NE-fNV"/>
-                            <constraint firstItem="Wql-gZ-1X1" firstAttribute="top" secondItem="xrq-sO-ZLa" secondAttribute="bottom" constant="24" id="kHz-dS-EMX"/>
+                            <constraint firstItem="Wql-gZ-1X1" firstAttribute="top" secondItem="xrq-sO-ZLa" secondAttribute="bottom" constant="16" id="kHz-dS-EMX"/>
                             <constraint firstItem="ED3-0i-vzT" firstAttribute="bottom" secondItem="du6-os-G9B" secondAttribute="bottom" constant="12" id="mge-cW-rMb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ED3-0i-vzT"/>
